--- a/Price Navigator/nbproject/private/private.properties
+++ b/Price Navigator/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\aniru\\AppData\\Roaming\\NetBeans\\16\\build.properties
+user.properties.file=C:\\Users\\Sameer\\AppData\\Roaming\\NetBeans\\16\\build.properties
