--- a/Price Navigator/nbproject/project.properties
+++ b/Price Navigator/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Price Navigator
+application.vendor=Aniruddha
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,24 @@ dist.jar=${dist.dir}/Price_Navigator.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Price_Navigator
+endorsed.classpath=
 excludes=
+file.reference.jakarta.activation-1.2.2.jar=C:\\Users\\aniru\\Desktop\\INFO5100-FinalProject-main\\MarketHarmonix-AEDFinal\\lib\\jakarta.activation-1.2.2.jar
+file.reference.javax.activation-1.1.0.7-jre8.jar=C:\\Users\\aniru\\Desktop\\INFO5100-FinalProject-main\\MarketHarmonix-AEDFinal\\lib\\javax.activation-1.1.0.7-jre8.jar
+file.reference.javax.activation-1.2.2.1-jre17-javadoc.jar=C:\\Users\\aniru\\Desktop\\INFO5100-FinalProject-main\\MarketHarmonix-AEDFinal\\lib\\javax.activation-1.2.2.1-jre17-javadoc.jar
+file.reference.javax.activation-1.2.2.1.jar=C:\\Users\\aniru\\Desktop\\INFO5100-FinalProject-main\\MarketHarmonix-AEDFinal\\lib\\javax.activation-1.2.2.1.jar
+file.reference.javax.activation-62-javadoc.jar=C:\\Users\\aniru\\Desktop\\INFO5100-FinalProject-main\\MarketHarmonix-AEDFinal\\lib\\javax.activation-62-javadoc.jar
+file.reference.javax.mail.jar=C:\\Users\\aniru\\Desktop\\INFO5100-FinalProject-main\\MarketHarmonix-AEDFinal\\lib\\javax.mail.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jakarta.activation-1.2.2.jar}:\
+    ${file.reference.javax.activation-1.1.0.7-jre8.jar}:\
+    ${file.reference.javax.activation-1.2.2.1-jre17-javadoc.jar}:\
+    ${file.reference.javax.activation-1.2.2.1.jar}:\
+    ${file.reference.javax.activation-62-javadoc.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
