--- a/Price Navigator/nbproject/project.properties
+++ b/Price Navigator/nbproject/project.properties
@@ -35,12 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Price_Navigator
 endorsed.classpath=
 excludes=
-file.reference.jakarta.activation-1.2.2.jar=C:\\Users\\aniru\\Desktop\\INFO5100-FinalProject-main\\MarketHarmonix-AEDFinal\\lib\\jakarta.activation-1.2.2.jar
-file.reference.javax.activation-1.1.0.7-jre8.jar=C:\\Users\\aniru\\Desktop\\INFO5100-FinalProject-main\\MarketHarmonix-AEDFinal\\lib\\javax.activation-1.1.0.7-jre8.jar
-file.reference.javax.activation-1.2.2.1-jre17-javadoc.jar=C:\\Users\\aniru\\Desktop\\INFO5100-FinalProject-main\\MarketHarmonix-AEDFinal\\lib\\javax.activation-1.2.2.1-jre17-javadoc.jar
-file.reference.javax.activation-1.2.2.1.jar=C:\\Users\\aniru\\Desktop\\INFO5100-FinalProject-main\\MarketHarmonix-AEDFinal\\lib\\javax.activation-1.2.2.1.jar
-file.reference.javax.activation-62-javadoc.jar=C:\\Users\\aniru\\Desktop\\INFO5100-FinalProject-main\\MarketHarmonix-AEDFinal\\lib\\javax.activation-62-javadoc.jar
-file.reference.javax.mail.jar=C:\\Users\\aniru\\Desktop\\INFO5100-FinalProject-main\\MarketHarmonix-AEDFinal\\lib\\javax.mail.jar
+file.reference.jakarta.activation-1.2.2.jar=../../../Downloads/INFO5100-FinalProject-main/INFO5100-FinalProject-main/MarketHarmonix-AEDFinal/lib/jakarta.activation-1.2.2.jar
+file.reference.javax.activation-1.1.0.7-jre8.jar=../../../Downloads/INFO5100-FinalProject-main/INFO5100-FinalProject-main/MarketHarmonix-AEDFinal/lib/javax.activation-1.1.0.7-jre8.jar
+file.reference.javax.activation-1.2.2.1-jre17-javadoc.jar=../../../Downloads/INFO5100-FinalProject-main/INFO5100-FinalProject-main/MarketHarmonix-AEDFinal/lib/javax.activation-1.2.2.1-jre17-javadoc.jar
+file.reference.javax.activation-1.2.2.1.jar=../../../Downloads/INFO5100-FinalProject-main/INFO5100-FinalProject-main/MarketHarmonix-AEDFinal/lib/javax.activation-1.2.2.1.jar
+file.reference.javax.activation-62-javadoc.jar=../../../Downloads/INFO5100-FinalProject-main/INFO5100-FinalProject-main/MarketHarmonix-AEDFinal/lib/javax.activation-62-javadoc.jar
+file.reference.javax.mail.jar=../../../Downloads/INFO5100-FinalProject-main/INFO5100-FinalProject-main/MarketHarmonix-AEDFinal/lib/javax.mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
